# als_assistant

./: .env.example  .gitignore  README.md  config.yml  pyproject.toml  requirements.txt
services/jupyter/: custom_start.sh  docker-compose.yml.j2  startup_script.py
services/jupyter/python3-epics-readonly/: kernel.json.j2
services/jupyter/python3-epics-write/: kernel.json.j2
services/langfuse/: docker-compose.yml.j2
services/mongo/: Dockerfile.db-init  docker-compose.yml.j2  init_db.py  requirements.txt  start_init.sh
services/open-webui/: docker-compose.yml.j2
services/pipelines/: docker-compose.yml.j2  main.py  start.sh
services/pv_finder/: Dockerfile  docker-compose.yml.j2  requirements.txt  start.sh
services/pv_finder/src/: main.py
src/als_assistant/: context_classes.py  initialization.py  registry.py
src/als_assistant/benchmarks/pv_finder/: run_benchmark.py
src/als_assistant/capabilities/: __init__.py  data_analysis.py  data_visualization.py  get_archiver_data.py  live_monitoring.py  machine_operations.py  pv_address_finding.py  pv_value_retrieval.py
src/als_assistant/capabilities/tests/: test_live_monitoring.py
src/als_assistant/database/ALS_codebase/matlab/: description_generator.py  utils.py
src/als_assistant/database/ALS_wiki/: check_progress.py  example_usage.py  pipeline.py
src/als_assistant/database/als_knowledge/: experiment_database.py
src/als_assistant/database/ao/: README.md  __init__.py  ao_config.py  ao_database.py  get_all_pvs.py  process_matlab_data.py  update_ao_database.py
src/als_assistant/framework_prompts/: clarification.py  classification.py  error_analysis.py  memory_extraction.py  orchestrator.py  response_generation.py  task_extraction.py
src/als_assistant/services/launcher/: README.md  service.py  utils.py
src/als_assistant/services/pv_finder/: agent.py  examples_loader.py  prompts.py  service.py  tools.py  util.py
src/als_assistant/utils/: observability.py
(+5 files in other folders)
